# reasoning-core

./: .gitignore  .gitmodules  .ignore  AGENTS.md  Config_difficulty_knob_migration.md  GALLERY.md  INTEGRATIONS.md  README.md  TASK_AUTHORING_GUIDE.md  TASK_INFLUENCE.json  TASK_INFLUENCE.md  TASK_INFLUENCE_README.md  basic_tasks.json  pyproject.toml  rgym_tasks.json  test_coref_hops.py  tox.ini
configs/: task_groups_v1.json
docs/: index.md  music_reasoning_specification.md
paper_exports/: ARTIFACTS.md  acc_all.tex  artifacts.py  claims.tex  ladder_table.py  main_results.tex  main_transfer_table.tex  mc_acc.tex  paper_artifacts.tex  saturation_reward_table.tex  scale_crossover_ladder.tex
per_task_results/: rc_refresh_ranking_3model.md
reasoning_core/: __init__.py  collect.py  downstream_eval.py  generation_worker.py  template.py
reasoning_core/openenv/reasoning_core_env/: .dockerignore  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
reasoning_core/openenv/reasoning_core_env/server/: Dockerfile  __init__.py  app.py  reasoning_core_environment.py
scripts/: TASK_INFLUENCE.json  TASK_INFLUENCE.md  TASK_INFLUENCE_README.md  build_gallery.py  data_generation.py  data_mixing.py  evaluate.py  evaluate_external.py  per_task_influence.py  rc_preprocess_upload.py  rc_preprocess_upload_deprecated.py  rc_preprocess_upload_streaming.py  run_ablation.sh  run_rc_preprocess_upload_safe.sh  scoring_score.py  summarize_external_results.py  task_influence.py  train.py
task_diagnostics/: CHEAP_PREDICTORS_70B.md  CHEAP_PREDICTORS_8B.md  CHEAP_PREDICTORS_albert.md  CHEAP_PREDICTORS_rcref.md  INFLUENCE_NOTES.md  MIGRATION.md  README.md  SHOTS_LIFT.md  SHOTS_LIFT_70b.md  SHOTS_LIFT_8b.md  SHOTS_ZS.md  TASK_INFLUENCE.json  TASK_INFLUENCE.md  TASK_INFLUENCE_RESULTS.md  TASK_ZEROSHOT_RESULTS.md  ZERO_SHOT.json  ZS_ALBERT.md  build_folio_eval.py  build_gsm8k_drop.py  build_mmlu_subjects.py  cache.py  cheap_predictors.py  collection_influence.py  coreference_shortcuts.py  distractor_retrieval.py  per_task_influence.py  per_task_influence_dev.py  potato_lm.py  rate_tasks.py  review_tasks.py  schemas.py  shortcut_gru_probe_notes.md  shortcut_miner.py  shots_lift_analysis.py  t5_shallow.py  task_influence.py  task_reviews.report.md  zero_shot_eval.py  zero_shot_preds.jsonl
tests/: prime_env_smoke_test.py  regex_induction_report.py  smoke_test.py  test_arithmetics.py  test_belief_tracking.py  test_binding.py  test_cfg_span.py  test_chord_roman_reasoning.py  test_code_analysis.py  test_code_execution.py  test_collection_generation.py  test_combinatorics.py  test_complexity.py  test_config_difficulty_migration.py  test_constrained_continuation.py  test_constraint_satisfaction.py  test_controlled_experiment.py  test_coreference.py  test_csp_core.py  (+39 more)
(+116 files in other folders)
