#[build-system]
#requires = ["setuptools"]
#build-backend = "setuptools.build_meta"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reasoning_core"
dynamic = ["version"]
readme = "README.md"
description = "Procedural data generators for symbolic pre-training, also including RL environments"

dependencies = [
    "gramforge",
    "faker",
    "inflection",
    "rapidfuzz",
    "unified-planning[pyperplan]",
    "tarski",
    "tiktoken",
    "networkx",
    "z3-solver",
    "pooch",
    "requests",
    "beautifulsoup4",
    "easydict",
    "appdirs",
    "regex",
    "greenery",
    "tqdm",
    "timeoutcontext",
    "pandas",
    "pyyaml",
    "tabulate",
    "duckdb",
    "funcy",
    "multiprocess",
    "xpflow",
    "exrex",
    "nltk",
    "wordfreq",
    "pgmpy",
    "unification",
    "toolz",
    "numpy",
    "sympy",
    "pyparsing",
    "whatthepatch",
    "lazy_object_proxy",
    "udocker",
    "wrapt",
    "psutil",
    "schedulefree @ git+https://github.com/facebookresearch/schedule_free.git@43e5c2d978920e1a3707a7609662c72b56401e62"
]

[project.optional-dependencies]
prime = ["prime", "verifiers"]
reasoning_gym = ["reasoning_gym"]

[tool.setuptools.packages.find]
include = ["reasoning_core*"]

[tool.setuptools.package-data]
"reasoning_core" = ["resources/**"]

[tool.hatch.version]
path = "reasoning_core/__init__.py"

[tool.hatch.build]
skip-excluded-dirs = true
exclude = [
    "/reasoning_core/**/__pycache__",
    "/reasoning_core/**/.ipynb_checkpoints",
    "/reasoning_core/.mountpoints/**",
    "/reasoning_core/generated_data/**",
    "/reasoning_core/index/**",
    "/reasoning_core/score_cache/**",
]

[tool.hatch.build.targets.wheel]
packages = ["reasoning_core"]

[tool.hatch.build.targets.sdist]
include = [
    "/GALLERY.md",
    "/LICENSE",
    "/README.md",
    "/TASK_AUTHORING_GUIDE.md",
    "/pyproject.toml",
    "/reasoning_core",
    "/tests",
]
